--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
         <a-entity collider-check raycaster="objects: .collidable"></a-entity>
       </a-camera>
 
-      <a-entity zappar-image="target: ./assets/example-tracking-image.zpt">
+      <!-- <a-entity zappar-image="target: ./assets/example-tracking-image.zpt"> -->
+      <a-entity zappar-image="target: ./assets/COSMO 1417-02 marker.zpt">
 
         <!-- Have a group that will only become visible when the target image comes into view-->
         <a-entity visibility-changer>
