--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <a-plane class="collidable" color="#000000" material="transparent: true; opacity: 0.8;" width="1" height="1" position="0 0 -0.01 "></a-plane>
 
           <!-- Include our 3D model-->
-          <a-entity rotation="90 0 0" id="model" gltf-model="./assets/TissueCosmo.glb" animation-mixer="clip: null"></a-entity>
+          <a-entity rotation="90 0 0" id="model" gltf-model="./assets/product-sample.glb" animation-mixer="clip: null"></a-entity>
 
         </a-entity>
 
