--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       </a-camera>
 
       <!-- <a-entity zappar-image="target: ./assets/example-tracking-image.zpt"> -->
-      <a-entity zappar-image="target: ./assets/COSMO 1417-02 marker.zpt">
+      <a-entity zappar-image="target: ./assets/example-tracking-image.zpt">
 
         <!-- Have a group that will only become visible when the target image comes into view-->
         <a-entity visibility-changer>
@@ -71,7 +71,7 @@
           <a-plane class="collidable" color="#000000" material="transparent: true; opacity: 0.8;" width="1" height="1" position="0 0 -0.01 "></a-plane>
 
           <!-- Include our 3D model-->
-          <a-entity rotation="90 0 0" id="model" gltf-model="./assets/product-sample.glb" animation-mixer="clip: null"></a-entity>
+          <a-entity rotation="90 0 0" id="model" gltf-model="./assets/waving.glb" animation-mixer="clip: null"></a-entity>
 
         </a-entity>
 
