--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       </a-camera>
 
       <!-- <a-entity zappar-image="target: ./assets/example-tracking-image.zpt"> -->
-      <a-entity zappar-image="target: ./assets/example-tracking-image.zpt">
+      <a-entity zappar-image="target: ./assets/COSMO 1417-02 marker.zpt">
 
         <!-- Have a group that will only become visible when the target image comes into view-->
         <a-entity visibility-changer>
