--- a/index2.html
+++ b/index2.html
@@ -62,7 +62,8 @@
       </a-camera>
 
       <!-- <a-entity zappar-image="target: ./assets/example-tracking-image.zpt"> -->
-      <a-entity zappar-image="target: ./assets/COSMO 1417-02 marker.zpt">
+      <!-- <a-entity zappar-image="target: ./assets/COSMO 1417-02 marker.zpt"> -->
+      <a-entity zappar-image="target: ./assets/cosmo.xml">
 
         <!-- Have a group that will only become visible when the target image comes into view-->
         <a-entity visibility-changer>
