--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <a-scene embedded arjs="trackingMethod: best; sourceType: webcam;">
 
     <!-- MARKER 3: Custom A -->
-    <a-marker type="pattern" url="./assets/cosmoIMG.patt">
-      <a-entity gltf-model="./assets/waving.glb" animation-mixer></a-entity>
+    <a-marker type="pattern" url="./assets/profileSekolah.patt">
+      <a-entity gltf-model="./assets/product-sample.glb" animation-mixer></a-entity>
     </a-marker>
 
     <a-entity camera></a-entity>
