--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <!-- MARKER 3: Custom A -->
     <a-marker type="pattern" url="./assets/profileSekolah.patt">
-      <a-entity gltf-model="./assets/product-sample.glb" animation-mixer></a-entity>
+      <a-entity gltf-model="./assets/waving.glb" animation-mixer></a-entity>
     </a-marker>
 
     <a-entity camera></a-entity>
