--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <a-scene embedded arjs="trackingMethod: best; sourceType: webcam;">
 
     <!-- MARKER 3: Custom A -->
-    <a-marker type="pattern" url="./assets/profileSekolah.patt">
+    <a-marker type="pattern" url="./assets/profile.patt">
       <a-entity gltf-model="./assets/waving.glb" animation-mixer></a-entity>
     </a-marker>
 
