--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
     <!-- MARKER 3: Custom A -->
     <a-marker type="pattern" url="./assets/profile.patt">
-      <a-entity gltf-model="./assets/waving.glb" animation-mixer></a-entity>
-    </a-marker>
+      <a-entity gltf-model="./assets/box-sample.glb" animation-mixer></a-entity>
+    </a-marker> 
 
     <a-entity camera></a-entity>
   </a-scene>
