--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <title>AR dengan Teks Tetap</title>
+  
+  <!-- A-Frame & AR.js -->
   <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
   <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
 </head>
 <body style="margin:0; overflow:hidden; touch-action: none;">
+  
   <a-scene 
     embedded 
     arjs="trackingMethod: best; sourceType: webcam; detectionMode: mono_and_matrix; matrixCodeType: 3x3;"
-    renderer="logarithmicDepthBuffer: true;">
+    renderer="logarithmicDepthBuffer: true;"
+    vr-mode-ui="enabled: false">
 
     <!-- MARKER -->
-    <a-marker 
-      id="myMarker" 
-      type="pattern" 
-      url="./assets/profile.patt"
-      registerevents>
+    <a-marker id="myMarker" type="pattern" url="./assets/profile.patt" registerevents>
 
       <!-- Model 3D -->
       <a-entity 
@@ -27,25 +29,41 @@
         animation-mixer
         rotation-control>
       </a-entity>
+
+      <!-- Teks di atas model -->
+      <a-text
+        id="arText"
+        value="https://youtube.com/testing"
+        color="white"
+        align="center"
+        width="6"
+        position="0 1.2 0"
+        rotation="0 0 0"
+        side="double"
+        wrap-count="40"
+        font="mozillavr">
+      </a-text>
+
     </a-marker>
 
     <!-- Kamera -->
     <a-entity camera></a-entity>
-
   </a-scene>
 
-  <!-- SCRIPT: AR Permanent + Rotate Jari -->
+  <!-- SCRIPT: AR Tetap + Rotasi Jari + Pindah Teks -->
   <script>
-    // 1. AR Tetap Muncul Setelah Terdeteksi
+    // 1. Pindahkan model + teks ke scene saat marker ditemukan
     AFRAME.registerComponent('registerevents', {
       init: function () {
         const marker = this.el;
         marker.addEventListener('markerFound', () => {
           const model = document.querySelector('#arModel');
+          const text = document.querySelector('#arText');
           const scene = document.querySelector('a-scene');
           const pos = marker.object3D.position.clone();
           const rot = marker.object3D.rotation.clone();
 
+          // Pindahkan model
           scene.appendChild(model);
           model.setAttribute('position', pos);
           model.setAttribute('rotation', {
@@ -53,12 +71,29 @@
             y: THREE.MathUtils.radToDeg(rot.y),
             z: THREE.MathUtils.radToDeg(rot.z)
           });
+
+          // Pindahkan teks
+          if (text) {
+            scene.appendChild(text);
+            text.setAttribute('position', { 
+              x: pos.x, 
+              y: pos.y + 1.2, 
+              z: pos.z 
+            });
+            text.setAttribute('rotation', {
+              x: THREE.MathUtils.radToDeg(rot.x),
+              y: THREE.MathUtils.radToDeg(rot.y),
+              z: THREE.MathUtils.radToDeg(rot.z)
+            });
+          }
+
+          // Sembunyikan marker
           marker.setAttribute('visible', false);
         });
       }
     });
 
-    // 2. Rotate dengan Jari (Touch & Drag)
+    // 2. Rotasi dengan jari (touch & drag)
     AFRAME.registerComponent('rotation-control', {
       init: function () {
         const el = this.el;
@@ -67,7 +102,7 @@
         let isDragging = false;
 
         const onStart = (e) => {
-          if (e.touches.length === 1) {
+          if (e.touches && e.touches.length === 1) {
             isDragging = true;
             startX = e.touches[0].clientX;
             startY = e.touches[0].clientY;
@@ -75,7 +110,7 @@
         };
 
         const onMove = (e) => {
-          if (!isDragging || e.touches.length !== 1) return;
+          if (!isDragging || !e.touches || e.touches.length !== 1) return;
           e.preventDefault();
 
           const deltaX = e.touches[0].clientX - startX;
@@ -99,6 +134,7 @@
         el.addEventListener('touchstart', onStart);
         el.addEventListener('touchmove', onMove, { passive: false });
         el.addEventListener('touchend', onEnd);
+        el.addEventListener('touchcancel', onEnd);
       }
     });
   </script>
