--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     embedded 
     arjs="trackingMethod: best; sourceType: webcam;"
     renderer="logarithmicDepthBuffer: true;"
-    vr-mode-ui="enabled: false">
+    vr-mode-ui="enabled: true">
 
     <!-- MARKER -->
     <a-marker id="myMarker" type="pattern" url="./assets/profile.patt" registerevents>
@@ -46,7 +46,7 @@
 
     <!-- Kamera + Cursor -->
     <a-entity camera>
-      <a-entity cursor="fuse: false"
+      <a-entity cursor="fuse: true"
                 position="0 0 -1"
                 geometry="primitive: ring; radiusInner: 0.02; radiusOuter: 0.03"
                 material="color: white; shader: flat"
